2008-09-21:  Added new BLAS and LAPACK functions:

               * trmm
               * trtrs
               * trtri

             Some minor API cleanups and internal improvements.

2008-09-17:  Added optional jitter argument to potrf, potrs, and potri.

2008-09-08:  !!! WARNING WARNING WARNING WARNING WARNING WARNING WARNING !!!

             potri and potrs now implicitly call potrf by default!
             This will break previous code depending on these functions,
             but should be trivial to fix.  This change was deemed
             necessary, because otherwise switching between sytri/potri
             and sytrs/potrs would cause surprises: the purely symmetric
             functions do already implicitly call the factorization
             unless a default parameter (ipiv) is overridden.

             Sorry for the inconvenience.

2008-07-21:  Generalized Mat.transpose to support specifying sub-matrices.

2008-04-23:  Fixed a parameter checking bug for syevr-related functions.

2008-04-11:  Added new BLAS function:

               * trmv

             Thanks to Martin Willensdorfer <ma.wi@gmx.at> for the patch!

2008-02-13:  Fixed a bug when implicitly allocating result matrices
             with user-specified offsets.  It may cause segfaults and
             affects many functions (though it is presumably very rarely
             triggered).

             Thanks to Shun Sakuraba <shun.sakuraba@gmail.com> for
             contributing this patch!

2008-01-11:  Fixed installation of new release.  Added new function:

               * Mat.detri

2008-01-02:  New major release due to restructuring.  The library is now
             packed into a separate namespace (Lacaml), and the previously
             visible Lacaml-module is now called "Impl".

2007-12-27:  Added new BLAS function:

               * symv

2007-11-22:  Added Mat.scal and Mat.axpy.

2007-11-21:  Fixed a bug in vector iteration functions related to